# AmaliTech-Labs-Solution

./: .gitignore  .pre-commit-config.yaml  README.md
Employee Payroll Tracker System/: data_store.py  employee.py  main.py  utils.py
Employee Payroll Tracker System/utils/: utils.py
Library Inventory Application/: author.py  book.py  borrower.py  data_store.py  loan.py  main.py  storage.py  utils.py
Library Inventory Application/data/: books.json  loans.json
Library Inventory Application/models/: author.py  book.py  loan.py
Library Inventory Application/services/: data_store.py  storage.py
Student Course Management System/: controllers.py  course.py  data_store.py  enrollment.py  grade.py  main.py  student.py  utils.py
Student Course Management System/models/: enrollment.py  grade.py
demo/: db.sqlite3  requirements.txt
module_2/Resilient Data Importer CLI/: .pre-commit-config.yaml  README.md  pyproject.toml
module_2/Resilient Data Importer CLI/resilient_importer/: cli.py  importer.py  storage.py
module_2/Resilient Data Importer CLI/src/resilient_importer/: .pre-commit-config.yaml
module_2/Resilient Data Importer CLI/src/resilient_importer/models/: user_model.py
module_2/Resilient Data Importer CLI/tests/: conftest.py  test_importer.py
module_2/ttd-based-weather-api/: README.md  pyproject.toml
module_2/ttd-based-weather-api/tests/: conftest.py  test_logging.py  test_providers.py  test_service_errors.py  test_service_success.py
module_2/ttd-based-weather-api/weather_service/: exceptions.py  logging_conf.py  models.py  providers.py  service.py
module_3/log-file-analyzer/: README.md  pyproject.toml
module_3/log-file-analyzer/log_file_analyzer/: __init__.py  config.py  main.py
module_3/log-file-analyzer/log_file_analyzer/models/: __init__.py  log_entry.py
module_3/log-file-analyzer/log_file_analyzer/services/: analysis_service.py  io_service.py  log_parser.py  report_service.py
module_3/log-file-analyzer/log_file_analyzer/utils/: decorators.py
module_3/student_grade_analytics_tool/: ARCHITECTURE.md  README.md  pyproject.toml
module_3/student_grade_analytics_tool/data/: sample_students.csv
module_3/student_grade_analytics_tool/student_analytics/: __init__.py  main.py
module_3/student_grade_analytics_tool/student_analytics/models/: course.py  student.py
module_3/student_grade_analytics_tool/student_analytics/services/: analysis_service.py  io_service.py  report_service.py  visualization_service.py
module_3/student_grade_analytics_tool/tests/: conftest.py  test_analysis_service.py  test_integration.py  test_io_service.py  test_models.py  test_report_service.py  test_visualization_service.py
module_4/e-commerce-analytics-data-pipeline/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
module_4/e-commerce-analytics-data-pipeline/docs/: architecture.md
module_4/e-commerce-analytics-data-pipeline/src/: controllers.py
module_4/e-commerce-analytics-data-pipeline/src/analytics/: reports.py
module_4/e-commerce-analytics-data-pipeline/src/config/: settings.py
module_4/e-commerce-analytics-data-pipeline/src/database/: mongo_client.py  postgres.py  redis_client.py  schema.sql
module_4/e-commerce-analytics-data-pipeline/src/models/: ecommerce.py
module_4/e-commerce-analytics-data-pipeline/src/pipelines/: ingestion.py  transformation.py
module_4/e-commerce-analytics-data-pipeline/src/services/: customer_service.py  order_service.py  product_service.py
module_4/e-commerce-analytics-data-pipeline/src/utils/: common.py  setup_db.py
module_4/e-commerce-analytics-data-pipeline/tests/: test_product_service.py
project_lab_url_shortener_microservice/: README.md
(+124 files in other folders)
