[project]
name = "log-file-analyzer"
version = "0.1.0"
description = "Lab 2: Log File Analyzer with Regex & Functional Programing"
authors = [
    {name = "Gisa M. Caleb Pacifique",email = "gisacaleb72@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
